--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 </div>
 
 <div class="dropfeature">
+
 <div class="dropphoto">
 <img src="images/sanfran.jpg" height="100%" width="100%">
 </div>
@@ -361,9 +362,9 @@ Tail pork chop kevin, t-bone short ribs ball tip shank frankfurter...
 </div>
 
 <div class="popularbig">
-<div class="popularbigphoto">
-<img src="images/sanfran.jpg" height="100%" width="100%">
-</div>
+
+<div class="popularbigphoto bg" style="background-image: url('images/sanfran.jpg')"></div>
+ 
 <div class="descriptor">
 <h3><a class="two" href="index.html">SAIC Trip to Italy</a></h3>
 <h5>STUDY ABROAD 9.13.2015</h5>
